<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dp" />

                        <EditText
                            android:id="@+id/doctext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/doct"
                            android:inputType="textPersonName" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radiom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/rm" />

                            <RadioButton
                                android:id="@+id/radiof"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="@string/rf" />
                        </RadioGroup>

                        <EditText
                            android:id="@+id/nomtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/nt"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/apeltext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/pt"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/dirtext"
                            android:layout_width="match_parent"
                            android:layout_height="109dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:hint="@string/dt"
                            android:inputType="textMultiLine" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tencuesta" />

                        <Switch
                            android:id="@+id/pregsw1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/pregunta1" />

                        <Switch
                            android:id="@+id/pregsw2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pregunta2" />

                        <Switch
                            android:id="@+id/pregsw3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pregunta3" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar"
                android:text="@string/botont" />

            <TextView
                android:id="@+id/saltext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Salida" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>